# Algo

dz3/: CMakeLists.txt
dz3/task1/: ArcGraph.h  MatrixGraph.h  SetGraph.h  main.cpp
dz3/task2/: CountShortPaths.h  Graph.h  ListGraph.h  main.cpp
dz3/task3/: Dijkstra.h  main.cpp
